@@ -16,8 +16,9 @@
 ## along with this program; if not, a copy is available at
 ## https://www.R-project.org/Licenses/GPL-2
 
-predict.crisk2bart <- function(object, newdata, newdata2, mc.cores=1,
-                              openmp=(mc.cores.openmp()>0), ...) {
+predict.crisk2bart <- function(object, newdata, newdata2,
+                               mc.cores=getOption('mc.cores', 1L),
+                               openmp=(mc.cores.openmp()>0), ...) {
 
     ## if(class(newdata) != "matrix") stop("newdata must be a matrix")
     ## if(class(newdata2) != "matrix") stop("newdata2 must be a matrix")
