@@ -16,7 +16,9 @@
 ## along with this program; if not, a copy is available at
 ## https://www.R-project.org/Licenses/GPL-2
 
-predict.recurbart <- function(object, newdata, mc.cores=1, openmp=(mc.cores.openmp()>0), ...) {
+predict.recurbart <- function(object, newdata,
+                              mc.cores=getOption('mc.cores', 1L),
+                              openmp=(mc.cores.openmp()>0), ...) {
 
     ##if(class(newdata) != "matrix") stop("newdata must be a matrix")
 
