@@ -16,7 +16,8 @@
 ## along with this program; if not, a copy is available at
 ## https://www.R-project.org/Licenses/GPL-2
 
-predict.survbart <- function(object, newdata, mc.cores=1,
+predict.survbart <- function(object, newdata,
+                             mc.cores=getOption('mc.cores', 1L),
                              openmp=(mc.cores.openmp()>0),
                              mult.impute=4,
                              seed=99, ...) {
